Load files output to game

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ project(taleOfFridge)
 
 add_library(fridgeLibs
     src/player.h
-    src/player.cpp 
+    src/player.cpp
+    src/fileLoader.h 
+    src/fileLoader.cpp  
 )
 
 add_executable(taleOfFridge src/main.cpp)
