Change inventory vector type to hold shared_ptrs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,9 @@ add_library(fridgeLibs
     src/item.h 
     src/item.cpp   
     src/controller.h 
-    src/controller.cpp 
+    src/controller.cpp
+    src/entity.h 
+    src/entity.cpp 
 )
 
 add_executable(taleOfFridge src/main.cpp)
