--- a/yamlAssets/objects/sword.yml
+++ b/yamlAssets/objects/sword.yml
@@ -1,7 +1,8 @@
 weapon:
   name: The blade
-  description: A mysterious talking blade that appears to guide your way.
-  Whether the blade is to be trusted is yet to be seen.
+  description: >
+    A mysterious talking blade that appears to guide your way.
+    Whether the blade is to be trusted is yet to be seen.
   attack: 3
   defense: 0
   weaponFlag: 1
