--- a/yamlAssets/rooms/intro2.yaml
+++ b/yamlAssets/rooms/intro2.yaml
@@ -1,9 +1,13 @@
 name: Rubbled cobblstone path
 description: You stand on a destroyed cobblestone street a few steps from the doorway to your home
 north: path to city center
-south: This way is blocked by rubble! 
-east: This way is blocked by rubble! 
+south: This way is blocked by rubble!
+east: This way is blocked by rubble!
 west: This way is blocked by rubble!
-items: [sword, potion, pain]
-characters: [player]
+items:
+  - sword
+  - potion
+  - pain
+characters:
+  - player
 visited: false
