--- a/yamlAssets/rooms/intro2.yaml
+++ b/yamlAssets/rooms/intro2.yaml
@@ -1,11 +1,12 @@
-name: Rubbled cobblstone path
+name: Rubbled cobblestone path
 description: |
   You stand on a destroyed cobblestone street a few steps from the doorway to your home, a potion and 
   pain lay on the ground close to your feet.
-north: path to city center
-south: This way is blocked by rubble!
-east: This way is blocked by rubble!
-west: This way is blocked by rubble!
+directions:
+  north: Path to city center
+  south: rubble
+  east: rubble
+  west: rubble
 items:
   - sword
   - potion
