add a new room with a jester

--- a/yamlAssets/rooms/cityPath.yaml
+++ b/yamlAssets/rooms/cityPath.yaml
@@ -3,7 +3,7 @@ description: |
   This path leads to the center of the city, a potion and 
   pain lay on the ground close to your feet.
 directions:
-  north: rubble
+  north: A comedic clearing
   south: Rubbled cobblestone path
   east: rubble
   west: rubble
